# rustypod

./: .env  .gitignore  Cargo.toml  justfile  license.md
migrations/: 20210213000000_initial.sql
src/: db.rs  fetch.rs  main.rs
web/: package.json
