[package]
authors = ["Jonathan Curran <jonathan@curran.in>"]
edition = "2018"
license-file = "license.md"
name = "rustypod"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.9", features = ["attributes"]}
chrono = "0.4"
directories = "3.0"
env_logger = "0.8"
log = "0.4"
sqlx = {version = "0.5", features = ["runtime-async-std-rustls", "migrate", "sqlite", "chrono"]}
structopt = "0.3"

fake = {version = "2.4", features = ["chrono"]}
rand = "0.8"

# for the following, see https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"
